updating some ukrainian and russian strings

--- a/commons/src/main/res/values-uk/strings.xml
+++ b/commons/src/main/res/values-uk/strings.xml
@@ -735,43 +735,43 @@
         If you want a refund anytime later, just contact us at hello@simplemobiletools.com and you will get it.</string>
 
     <!-- Pro comparison (shown in the deprecated free apps) -->
-    <string name="why_upgrade">Get the Pro version now!</string>
-    <string name="why_upgrade_basic_version">Basic</string>
+    <string name="why_upgrade">Отримайте Pro-версію просто зараз!</string>
+    <string name="why_upgrade_basic_version">Базова</string>
     <string name="why_upgrade_pro_version">Pro</string>
-    <string name="why_upgrade_no_ads">No ads</string>
-    <string name="why_upgrade_no_internet_access">No internet access</string>
-    <string name="why_upgrade_footer">+ 100% Money Back Guarantee</string>
+    <string name="why_upgrade_no_ads">Жодної реклами</string>
+    <string name="why_upgrade_no_internet_access">Без доступу до Інтернету</string>
+    <string name="why_upgrade_footer">+ 100% гарантія повернення коштів</string>
 
     <!-- Gallery Pro -->
-    <string name="why_upgrade_advanced_photo_editor">Advanced photo editor</string>
-    <string name="why_upgrade_heic_support">HEIC/HEIF file support</string>
-    <string name="why_upgrade_batch_renaming">Advanced batch file renaming</string>
-    <string name="why_upgrade_folder_locking">Individual folder locking</string>
-    <string name="why_upgrade_printing_support">Printing support</string>
+    <string name="why_upgrade_advanced_photo_editor">Удосконалений фоторедактор</string>
+    <string name="why_upgrade_heic_support">Підтримка файлів HEIC/HEIF</string>
+    <string name="why_upgrade_batch_renaming">Удосконалене перейменування пакетних файлів</string>
+    <string name="why_upgrade_folder_locking">Індивідуальне блокування папок</string>
+    <string name="why_upgrade_printing_support">Підтримка друку</string>
 
     <!-- Calendar Pro -->
-    <string name="why_upgrade_time_zone_support">Time zone support</string>
-    <string name="why_upgrade_attendees_emails">Attendees and email reminders</string>
-    <string name="why_upgrade_easy_event_importing">Easy event importing</string>
-    <string name="why_upgrade_new_widgets">New widgets</string>
+    <string name="why_upgrade_time_zone_support">Підтримка часових поясів</string>
+    <string name="why_upgrade_attendees_emails">Відвідувачі та нагадування електронною поштою</string>
+    <string name="why_upgrade_easy_event_importing">Зручний імпорт подій</string>
+    <string name="why_upgrade_new_widgets">Нові віджети</string>
 
     <!-- Contacts Pro -->
-    <string name="why_upgrade_duplicate_contact_merging">Improved duplicate contact merging</string>
-    <string name="why_upgrade_font_size_customization">Font size customization</string>
-    <string name="why_upgrade_private_contact_sharing">Optional private contact sharing within our apps</string>
+    <string name="why_upgrade_duplicate_contact_merging">Удосконалена функція злиття контактів</string>
+    <string name="why_upgrade_font_size_customization">Налаштування розміру шрифту</string>
+    <string name="why_upgrade_private_contact_sharing">Додатковий обмін конфіденційними контактами в наших</string>
 
     <!-- Notes Pro -->
-    <string name="why_upgrade_checklists">Checklists</string>
-    <string name="why_upgrade_different_note_per_widget">Different note and colors per widget</string>
+    <string name="why_upgrade_checklists">Контрольні списки</string>
+    <string name="why_upgrade_different_note_per_widget">Різні замітки та кольори для кожного віджета</string>
 
     <!-- File Manager Pro -->
-    <string name="why_upgrade_date_and_time_format">Date and time format customization</string>
-    <string name="why_upgrade_shortcuts">Home screen shortcuts</string>
-    <string name="why_upgrade_file_compression">File compression support</string>
+    <string name="why_upgrade_date_and_time_format">Налаштування формату дати та часу</string>
+    <string name="why_upgrade_shortcuts">Ярлики на головному екрані</string>
+    <string name="why_upgrade_file_compression">Підтримка стиснення файлів</string>
 
     <!-- Draw Pro -->
-    <string name="why_upgrade_background_color_customization">Background color customization</string>
-    <string name="why_upgrade_file_importing">File importing support</string>
+    <string name="why_upgrade_background_color_customization">Налаштування кольору фону</string>
+    <string name="why_upgrade_file_importing">Підтримка імпорту файлів</string>
 
     <!-- License -->
     <string name="notice">Цей додаток створено з використанням наступних бібліотек сторонніх розробників, що полегшує мою працю. Дякую.</string>
