updating some strings

--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -736,43 +736,43 @@
          Si vous souhaitez un remboursement à tout moment, contactez-nous à l\'adresse hello@simplemobiletools.com et vous l\'obtiendrez. </string>
 
     <!-- Pro comparison (shown in the deprecated free apps) -->
-    <string name="why_upgrade">Get the Pro version now!</string>
+    <string name="why_upgrade">Obtenez la version Pro maintenant !</string>
     <string name="why_upgrade_basic_version">Basic</string>
     <string name="why_upgrade_pro_version">Pro</string>
-    <string name="why_upgrade_no_ads">No ads</string>
-    <string name="why_upgrade_no_internet_access">No internet access</string>
-    <string name="why_upgrade_footer">+ 100% Money Back Guarantee</string>
+    <string name="why_upgrade_no_ads">Pas de publicité</string>
+    <string name="why_upgrade_no_internet_access">Pas d`accès à l`internet</string>
+    <string name="why_upgrade_footer">+ 100% Garantie de remboursement</string>
 
     <!-- Gallery Pro -->
-    <string name="why_upgrade_advanced_photo_editor">Advanced photo editor</string>
-    <string name="why_upgrade_heic_support">HEIC/HEIF file support</string>
-    <string name="why_upgrade_batch_renaming">Advanced batch file renaming</string>
-    <string name="why_upgrade_folder_locking">Individual folder locking</string>
-    <string name="why_upgrade_printing_support">Printing support</string>
+    <string name="why_upgrade_advanced_photo_editor">Éditeur de photos avancé</string>
+    <string name="why_upgrade_heic_support">Support du dossier HEIC/HEIF</string>
+    <string name="why_upgrade_batch_renaming">Renommage avancé des fichiers batch</string>
+    <string name="why_upgrade_folder_locking">Verrouillage des dossiers individuels</string>
+    <string name="why_upgrade_printing_support">Support d`impression</string>
 
     <!-- Calendar Pro -->
-    <string name="why_upgrade_time_zone_support">Time zone support</string>
-    <string name="why_upgrade_attendees_emails">Attendees and email reminders</string>
-    <string name="why_upgrade_easy_event_importing">Easy event importing</string>
-    <string name="why_upgrade_new_widgets">New widgets</string>
+    <string name="why_upgrade_time_zone_support">Support des fuseaux horaires</string>
+    <string name="why_upgrade_attendees_emails">Participants et rappels par courrier électronique</string>
+    <string name="why_upgrade_easy_event_importing">Importation facile des événements</string>
+    <string name="why_upgrade_new_widgets">Nouveaux widgets</string>
 
     <!-- Contacts Pro -->
-    <string name="why_upgrade_duplicate_contact_merging">Improved duplicate contact merging</string>
-    <string name="why_upgrade_font_size_customization">Font size customization</string>
-    <string name="why_upgrade_private_contact_sharing">Optional private contact sharing within our apps</string>
+    <string name="why_upgrade_duplicate_contact_merging">Fusion améliorée des contacts en double</string>
+    <string name="why_upgrade_font_size_customization">Personnalisation de la taille des polices</string>
+    <string name="why_upgrade_private_contact_sharing">Partage facultatif de contacts privés parmi nos applications</string>
 
     <!-- Notes Pro -->
-    <string name="why_upgrade_checklists">Checklists</string>
-    <string name="why_upgrade_different_note_per_widget">Different note and colors per widget</string>
+    <string name="why_upgrade_checklists">Listes de contrôle</string>
+    <string name="why_upgrade_different_note_per_widget">Différentes notes et couleurs par widget</string>
 
     <!-- File Manager Pro -->
-    <string name="why_upgrade_date_and_time_format">Date and time format customization</string>
-    <string name="why_upgrade_shortcuts">Home screen shortcuts</string>
-    <string name="why_upgrade_file_compression">File compression support</string>
+    <string name="why_upgrade_date_and_time_format">Personnalisation du format de date et d`heure</string>
+    <string name="why_upgrade_shortcuts">Raccourcis pour l`écran d`accueil</string>
+    <string name="why_upgrade_file_compression">Support de compression de fichiers</string>
 
     <!-- Draw Pro -->
-    <string name="why_upgrade_background_color_customization">Background color customization</string>
-    <string name="why_upgrade_file_importing">File importing support</string>
+    <string name="why_upgrade_background_color_customization">Personnalisation de la couleur de fond</string>
+    <string name="why_upgrade_file_importing">Support d`importation de fichiers</string>
 
     <!-- License -->
     <string name="notice">Cette application utilise les bibliothèques tierces suivantes pour me simplifier la vie. Merci.</string>
