--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -735,43 +735,43 @@
         Se vuoi chiedere un rimborso in un momento successivo, contattaci su hello@simplemobiletools.com e lo otterrai.</string>
 
     <!-- Pro comparison (shown in the deprecated free apps) -->
-    <string name="why_upgrade">Get the Pro version now!</string>
+    <string name="why_upgrade">Ottieni subito la versione Pro!</string>
     <string name="why_upgrade_basic_version">Basic</string>
     <string name="why_upgrade_pro_version">Pro</string>
-    <string name="why_upgrade_no_ads">No ads</string>
-    <string name="why_upgrade_no_internet_access">No internet access</string>
-    <string name="why_upgrade_footer">+ 100% Money Back Guarantee</string>
+    <string name="why_upgrade_no_ads">No pubblicità</string>
+    <string name="why_upgrade_no_internet_access">No accesso a Internet</string>
+    <string name="why_upgrade_footer">+ 100% garanzia soddisfatti o rimborsati</string>
 
     <!-- Gallery Pro -->
-    <string name="why_upgrade_advanced_photo_editor">Advanced photo editor</string>
-    <string name="why_upgrade_heic_support">HEIC/HEIF file support</string>
-    <string name="why_upgrade_batch_renaming">Advanced batch file renaming</string>
-    <string name="why_upgrade_folder_locking">Individual folder locking</string>
-    <string name="why_upgrade_printing_support">Printing support</string>
+    <string name="why_upgrade_advanced_photo_editor">Editor fotografico avanzato</string>
+    <string name="why_upgrade_heic_support">Supporto file HEIC/HEIF</string>
+    <string name="why_upgrade_batch_renaming">Ridenominazione avanzata dei file batch</string>
+    <string name="why_upgrade_folder_locking">Bloccaggio individuale delle cartelle</string>
+    <string name="why_upgrade_printing_support">Supporto per la stampa</string>
 
     <!-- Calendar Pro -->
-    <string name="why_upgrade_time_zone_support">Time zone support</string>
-    <string name="why_upgrade_attendees_emails">Attendees and email reminders</string>
-    <string name="why_upgrade_easy_event_importing">Easy event importing</string>
-    <string name="why_upgrade_new_widgets">New widgets</string>
+    <string name="why_upgrade_time_zone_support">Supporto per il fuso orario</string>
+    <string name="why_upgrade_attendees_emails">Partecipanti e promemoria via e-mail</string>
+    <string name="why_upgrade_easy_event_importing">Facile importazione di eventi</string>
+    <string name="why_upgrade_new_widgets">Nuovi widget</string>
 
     <!-- Contacts Pro -->
-    <string name="why_upgrade_duplicate_contact_merging">Improved duplicate contact merging</string>
-    <string name="why_upgrade_font_size_customization">Font size customization</string>
-    <string name="why_upgrade_private_contact_sharing">Optional private contact sharing within our apps</string>
+    <string name="why_upgrade_duplicate_contact_merging">Fusione di contatti duplicati migliorata</string>
+    <string name="why_upgrade_font_size_customization">Personalizzazione della dimensione dei caratteri</string>
+    <string name="why_upgrade_private_contact_sharing">Condivisione opzionale dei contatti privati tra le nostre applicazioni</string>
 
     <!-- Notes Pro -->
-    <string name="why_upgrade_checklists">Checklists</string>
-    <string name="why_upgrade_different_note_per_widget">Different note and colors per widget</string>
+    <string name="why_upgrade_checklists">Liste di controllo</string>
+    <string name="why_upgrade_different_note_per_widget">Note e colori diversi per ogni widget</string>
 
     <!-- File Manager Pro -->
-    <string name="why_upgrade_date_and_time_format">Date and time format customization</string>
-    <string name="why_upgrade_shortcuts">Home screen shortcuts</string>
-    <string name="why_upgrade_file_compression">File compression support</string>
+    <string name="why_upgrade_date_and_time_format">Personalizzazione del formato di data e ora</string>
+    <string name="why_upgrade_shortcuts">Scorciatoie della schermata iniziale</string>
+    <string name="why_upgrade_file_compression">Supporto per la compressione dei file</string>
 
     <!-- Draw Pro -->
-    <string name="why_upgrade_background_color_customization">Background color customization</string>
-    <string name="why_upgrade_file_importing">File importing support</string>
+    <string name="why_upgrade_background_color_customization">Personalizzazione del colore di sfondo</string>
+    <string name="why_upgrade_file_importing">Supporto per l`importazione di file</string>
 
     <!-- License -->
     <string name="notice">Questa app usa le seguenti librerie di terze parti per semplificarmi la vita. Vi ringrazio.</string>
