--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -803,6 +803,7 @@
     <string name="event_bus_title">Event Bus (intern kommunikation i appen)</string>
     <string name="audio_record_view_title">Audio Record View (audio-visualisering)</string>
     <string name="sms_mms_title">SMS MMS (håndtering af SMS og MMS)</string>
+    <string name="apng_title">APNG Android (animated WebP support)</string>
 
     <!-- Google Play listing -->
     <string name="deprecated_app">FORÆLDET: Denne version af appen vedligeholdes ikke længere, skift til Pro-versionen her https://play.google.com/store/apps/details?id=com.simplemobiletools.xxx.pro</string>
