--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -804,6 +804,7 @@
     <string name="event_bus_title">Event Bus (Comunicación dentro de la aplicación)</string>
     <string name="audio_record_view_title">Audio Record View (Visualización de audio)</string>
     <string name="sms_mms_title">SMS MMS (Manejo de SMS y MMS)</string>
+    <string name="apng_title">APNG Android (animated WebP support)</string>
 
     <!-- Google Play listing -->
     <string name="deprecated_app">OBSOLETO: Esta versión de la aplicación ya no es mantenida, obtén la versión Pro en https://play.google.com/store/apps/details?id=com.simplemobiletools.xxx.pro</string>
