--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -805,6 +805,7 @@
     <string name="event_bus_title">Event Bus (Kommunikation innerhal der App)</string>
     <string name="audio_record_view_title">Audio Record View (Audio Visualisierung)</string>
     <string name="sms_mms_title">SMS MMS (SMS und MMS Handhabung)</string>
+    <string name="apng_title">APNG Android (animated WebP support)</string>
 
     <!-- Google Play listing -->
     <string name="deprecated_app">Veraltet: Diese Version der App wird nicht länger unterstützt. Hol dir die Pro-Version unter https://play.google.com/store/apps/details?id=com.simplemobiletools.xxx.pro</string>
