--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -734,43 +734,43 @@
         Vil du på et senere tidspunkt have pengene refunderet, skal du blot sende en mail til hello@simplemobiletools.com, så klarer vi det.</string>
 
     <!-- Pro comparison (shown in the deprecated free apps) -->
-    <string name="why_upgrade">Get the Pro version now!</string>
+    <string name="why_upgrade">Få Pro-versionen nu!</string>
     <string name="why_upgrade_basic_version">Basic</string>
     <string name="why_upgrade_pro_version">Pro</string>
-    <string name="why_upgrade_no_ads">No ads</string>
-    <string name="why_upgrade_no_internet_access">No internet access</string>
-    <string name="why_upgrade_footer">+ 100% Money Back Guarantee</string>
+    <string name="why_upgrade_no_ads">Ingen reklamer</string>
+    <string name="why_upgrade_no_internet_access">Ingen internetadgang</string>
+    <string name="why_upgrade_footer">+ Fuld tilfredshed eller pengene tilbage</string>
 
     <!-- Gallery Pro -->
-    <string name="why_upgrade_advanced_photo_editor">Advanced photo editor</string>
-    <string name="why_upgrade_heic_support">HEIC/HEIF file support</string>
-    <string name="why_upgrade_batch_renaming">Advanced batch file renaming</string>
-    <string name="why_upgrade_folder_locking">Individual folder locking</string>
-    <string name="why_upgrade_printing_support">Printing support</string>
+    <string name="why_upgrade_advanced_photo_editor">Avanceret fotoredigering</string>
+    <string name="why_upgrade_heic_support">HEIC/HEIF filunderstøttelse</string>
+    <string name="why_upgrade_batch_renaming">Avanceret masseomdøbning af filer</string>
+    <string name="why_upgrade_folder_locking">Individuel låsning af mapper</string>
+    <string name="why_upgrade_printing_support">Udskrivningssupport</string>
 
     <!-- Calendar Pro -->
-    <string name="why_upgrade_time_zone_support">Time zone support</string>
-    <string name="why_upgrade_attendees_emails">Attendees and email reminders</string>
-    <string name="why_upgrade_easy_event_importing">Easy event importing</string>
-    <string name="why_upgrade_new_widgets">New widgets</string>
+    <string name="why_upgrade_time_zone_support">Tidszone-support</string>
+    <string name="why_upgrade_attendees_emails">Deltager- og mail-påmindelser</string>
+    <string name="why_upgrade_easy_event_importing">Nem import af begivenheder</string>
+    <string name="why_upgrade_new_widgets">Nye widgets</string>
 
     <!-- Contacts Pro -->
-    <string name="why_upgrade_duplicate_contact_merging">Improved duplicate contact merging</string>
-    <string name="why_upgrade_font_size_customization">Font size customization</string>
-    <string name="why_upgrade_private_contact_sharing">Optional private contact sharing within our apps</string>
+    <string name="why_upgrade_duplicate_contact_merging">Forbedret sammenfletning af duplikerede kontakter</string>
+    <string name="why_upgrade_font_size_customization">Skræddersyet skriftstørrelse</string>
+    <string name="why_upgrade_private_contact_sharing">Mulighed for deling af private kontakter med dine apps</string>
 
     <!-- Notes Pro -->
-    <string name="why_upgrade_checklists">Checklists</string>
-    <string name="why_upgrade_different_note_per_widget">Different note and colors per widget</string>
+    <string name="why_upgrade_checklists">Tjeklister</string>
+    <string name="why_upgrade_different_note_per_widget">Forskellig note og farver per widget</string>
 
     <!-- File Manager Pro -->
-    <string name="why_upgrade_date_and_time_format">Date and time format customization</string>
-    <string name="why_upgrade_shortcuts">Home screen shortcuts</string>
-    <string name="why_upgrade_file_compression">File compression support</string>
+    <string name="why_upgrade_date_and_time_format">Tilpasning af format på dato og tid</string>
+    <string name="why_upgrade_shortcuts">Genveje til startside</string>
+    <string name="why_upgrade_file_compression">Understøtter pakning af filer</string>
 
     <!-- Draw Pro -->
-    <string name="why_upgrade_background_color_customization">Background color customization</string>
-    <string name="why_upgrade_file_importing">File importing support</string>
+    <string name="why_upgrade_background_color_customization">Selvvalgt baggrundsfarve</string>
+    <string name="why_upgrade_file_importing">Understøtter filimport</string>
 
     <!-- License -->
     <string name="notice">Denne app bruger følgende 3.-parts biblioteker der gør at mit liv bliver lidt enklere. Tak.</string>
